--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="col-md-6 col-sm-6">
             <div class="about-info">
               <h2 class="heading">Come Join Us</h2>
-              <p>We're a friendly neighborhood bar equipped award winning and fan favorite beers on draft fit to satisfy any and all beer lovers as well as a diverse collection of fine wines and seltzers.</p>
+              <p>We're a friendly neighborhood bar with award winning and fan favorite beers on draft fit to satisfy any and all beer lovers as well as a diverse collection of fine wines and seltzers.</p>
               <div class="details-list">
                 <ul>
                   <li><i class="fa fa-check"></i>15 award winning and fan favorite beers</li>
