add S to address

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="col-md-offset-3 col-md-6 text-center">
           <div class="widget">
             <h4 class="widget-title">Happy Tap</h4>
-            <address>1757 8th St<br>Colorado Springs, CO 80906</address>
+            <address>1757 S 8th St<br>Colorado Springs, CO 80906</address>
             <div class="social-list">
               <!-- <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a> -->
               <a href="https://www.facebook.com/pg/HappyTapCO/about/?ref=page_internal"><i class="fa fa-facebook" aria-hidden="true"></i></a>
