--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       <div class="container">
         <div class="row">
           <div class="inner text-center">
-            <h1 class="logo-name">Happy Tap</h1>
+            <img class="logo-main" src="img/logo.JPG">
+            <!-- <h1 class="logo-name">Happy Tap</h1> -->
             <h2>Your friendly neighborhood taproom</h2>
             <p>Beer | Food Trucks | Wine</p>
           </div>
