add logo to top

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#about">About</a>
-            <a href="#event">Announcements</a>
+            <!-- <a href="#event">Announcements</a> -->
             <a href="#menu-list">Menu and Events</a>
             <a href="#gallery">Gallery</a>
             <a href="#contact">Join Us</a>
@@ -210,5 +210,9 @@
  
 
 </body>
+
+<script type="text/javascript">
+  !function(e,n){var t=document.createElement("script"),a=document.getElementsByTagName("script")[0];t.async=1,a.parentNode.insertBefore(t,a),t.onload=t.onreadystatechange=function(e,a){(a||!t.readyState||/loaded|complete/.test(t.readyState))&&(t.onload=t.onreadystatechange=null,t=void 0,a||n&&n())},t.src=e}("https://embed-menu-preloader.untappdapi.com/embed-menu-preloader.min.js",function(){PreloadEmbedMenu("menu-container",26070,99926)});
+</script>
 
 </html>
