--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-md-12 text-center marb-35">
           <h1 class="header-h">About Us</h1>
-          <p class="header-p">Come drink with the Springs best!</p>
+          <p class="header-p">Come drink with the Springs' best!</p>
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-10">
@@ -84,9 +84,9 @@
               <p>We're a friendly neighborhood bar with award winning and fan favorite beers on draft fit to satisfy any and all beer lovers as well as a diverse collection of fine wines and seltzers.</p>
               <div class="details-list">
                 <ul>
-                  <li><i class="fa fa-check"></i>15 award winning and fan favorite beers</li>
+                  <li><i class="fa fa-check"></i>15 award-winning and fan favorite beers</li>
                   <li><i class="fa fa-check"></i>Free WiFi</li>
-                  <li><i class="fa fa-check"></i>All football, soccer, baseball and basketball channels</li>
+                  <li><i class="fa fa-check"></i>All football, soccer, baseball, and basketball channels</li>
                   <li><i class="fa fa-check"></i>Family friendly</li>
                   <li><i class="fa fa-check"></i>Dog friendly</li>
                 </ul>
